Bug in z-index

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -638,14 +638,8 @@ td.td-ellipsis {
 }
 
 
-.modal:nth-of-type(even) {
-    z-index: 1053 !important;
-}
-.modal:nth-of-type(odd) {
-    z-index: 1051 !important;
-}
 .modal-backdrop.show:nth-of-type(odd) {
-    z-index: 1051 !important;
+    z-index: 1052 !important;
 }
 .modal-backdrop.show:nth-of-type(even) {
     z-index: 1050 !important;
